--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project-name</title>
+    <title>Portfolio</title>
+    <link rel="icon" href="./images/logo.png">
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
     <!-- Your element goes here -->
+    <header>
+      <div class="logo">
+          <img src="./images/logo.png" alt="logo">
+      </div>
+      <nav>
+          <ul>
+              <li><a href="#home">Home_</a></li>
+              <li><a href="#about">About_</a></li>
+              <li><a href="#skills">Skills_</a></li>
+              <li><a href="#portfolio">Portfolio_</a></li>
+              <li><a href="#contact">Contact_</a></li>
+          </ul>
+      </nav>
+  </header>
      <!-- Custom scripts, edit above this line -->
     <script src="./scripts/index.js"></script>
   </body>
