--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <link rel="icon" href="./images/logo.png">
-    <link rel="stylesheet" href="./styles/main.css" />
-  </head>
-  <body>
-    <!-- Your element goes here -->
-    <header>
-      <div class="logo">
-          <img src="./images/logo.png" alt="logo">
-      </div>
-      <nav>
-          <ul>
-              <li><a href="#home">Home_</a></li>
-              <li><a href="#about">About_</a></li>
-              <li><a href="#skills">Skills_</a></li>
-              <li><a href="#portfolio">Portfolio_</a></li>
-              <li><a href="#contact">Contact_</a></li>
-          </ul>
-      </nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio</title>
+  <link rel="icon" href="./images/logo-1.png">
+  <link rel="stylesheet" href="./styles/main.css" />
+</head>
+
+<body>
+  <!-- Your element goes here -->
+  <header>
+    <div class="logo">
+      <img src="./images/logo.png" alt="logo">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#home">Home_</a></li>
+        <li><a href="#about">About_</a></li>
+        <li><a href="#skills">Skills_</a></li>
+        <li><a href="#portfolio">Portfolio_</a></li>
+        <li><a href="#contact">Contact_</a></li>
+      </ul>
+    </nav>
   </header>
-     <!-- Custom scripts, edit above this line -->
-    <script src="./scripts/index.js"></script>
-  </body>
+  <main>
+    <div>
+      <img src="./images/Portfolio Image.png" alt="">
+    </div>
+    <div>
+      <h1>Coding Lover and Free Thinker</h1>
+      <p>Winner of the 2nd Prize and the The Krystian Zimerman Prize for the best performance of a Sonata at the XVIII
+        Chopin Competition.
+        BBC New Generation Artist 2019-2022.
+        Winner of the Hamamatsu, Montecarlo, and Sydney International Piano Competition.</p>
+      <button>DISCOVER MORE</button>
+    </div>
+
+  </main>
+  <!-- Custom scripts, edit above this line -->
+  <script src="./scripts/index.js"></script>
+</body>
+
 </html>
