adding my work's images

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
+  <title>AB Portfolio</title>
   <link rel="icon" href="./images/logo-1.png">
   <link rel="stylesheet" href="./styles/main.css" />
 </head>
@@ -27,18 +27,47 @@
     </nav>
   </header>
   <main>
-    <div>
-      <img src="./images/Portfolio Image.png" alt="">
-    </div>
-    <div>
-      <h1>Coding Lover and Free Thinker</h1>
-      <p>Winner of the 2nd Prize and the The Krystian Zimerman Prize for the best performance of a Sonata at the XVIII
-        Chopin Competition.
-        BBC New Generation Artist 2019-2022.
-        Winner of the Hamamatsu, Montecarlo, and Sydney International Piano Competition.</p>
-      <button>DISCOVER MORE</button>
-    </div>
-
+    <section class="main-container">
+      <article>
+        <img src="./images/Portfolio Image.png" alt="">
+        <div class="main-intro">
+          <h2>Coding Lover and Free Thinker</h2>
+          Winner of the 2nd Prize and the The Krystian Zimerman Prize for the best performance of a Sonata at the XVIII
+          Chopin Competition.
+          BBC New Generation Artist 2019-2022.
+          Winner of the Hamamatsu, Montecarlo, and Sydney International Piano Competition.
+        </div>
+        <!-- <a href="#contact" class="btn">Get In Touch</a> -->
+        <button>DISCOVER MORE</button>
+      </article>
+      <article class="myworks">
+        <div>
+          <ul>
+            <li>
+              <div>
+                <span>-----MY WORKS</span>
+                <h2>See My Works Which Will Amaze You!</h2>
+                <p>We develop the best quality website that serves for the long-term. Well-documented, clean, easy and
+                  elegant interface helps any non-technical clients.</p>
+              </div>
+            </li>
+            <li><a href="https://abatyrbekova.github.io/gallery-wall/" target="_blank"> <img
+                  src="./images/my-work-1.jpg" alt="my-work-1"> </a>
+            </li>
+            <li><a href="https://abatyrbekova.github.io/Log-in-page/" target="_blank"> <img src="./images/my-work-2.jpg"
+                  alt="my-work-2"></a>
+            </li>
+            <li><a href="https://abatyrbekova.github.io/periodic-Table/" target="_blank"> <img
+                  src="./images/my-work-3.jpg" alt="my-work-3"></a></li>
+            <li><a href="https://abatyrbekova.github.io/mobile-app/" target="_blank"><img src="./images/my-work-4.jpg"
+                  alt="my-work-4"></a></li>
+            <li><a href="https://abatyrbekova.github.io/youtube-clone/" target="_blank"><img
+                  src="./images/my-work-5.jpg" alt="my-work-5"></a></li>
+            <li><a href="tttps://FbW-WD21-E11.github.io/uib-layout-magazine-landing-page-abatyrbekova/"
+                target="_blank"><img src="./images/my-work-6.jpg" alt="my-work-6"></a></li>
+          </ul>
+        </div>
+      </article>
   </main>
   <!-- Custom scripts, edit above this line -->
   <script src="./scripts/index.js"></script>
