--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,15 @@
 </head>
 
 <body>
-  <!-- Your element goes here -->
   <header>
+    <!-- Logo -->
     <div class="logo">
-      <img src="./images/logo.png" alt="logo">
+      <a href="#"><img src="./images/logo.png" alt="logo"></a>
     </div>
+    <!-- Menu -->
     <nav>
       <ul>
-        <li><a href="#home">Home_</a></li>
+        <li><a href="#intro">Home_</a></li>
         <li><a href="#about">About_</a></li>
         <li><a href="#skills">Skills_</a></li>
         <li><a href="#myworks">Portfolio_</a></li>
@@ -29,13 +30,13 @@
   </header>
   <main>
     <section class="main-container">
+      <!-- Home -->
       <article id="intro">
         <img src="./images/Portfolio Image.png" alt="Portfolio_image">
         <div class="main-intro">
           <h2>Coding Lover and Free Thinker</h2>
           <p>I'm currently a student at Digital Career Institute.</p>
-          <button>DISCOVER MORE</button>
-          <!-- <a href="#contact" class="btn">Get In Touch</a> -->
+          <a href="#about" class="btn">discover more</a>
         </div>
         <div class="social-btn">
           <a href="https://m.facebook.com/people/Aigerim-Batyrbekova/100001646539160/" target="_blank"><i
@@ -45,114 +46,87 @@
           <a href="https://github.com/abatyrbekova" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
       </article>
-
+      <!-- About -->
       <article id="about">
         <div>
           <span>-----MY LIFE-----</span>
-          <h2>See My Works Which Will Amaze You!</h2>
-          <p>I try to develop the best quality website that serves for the long-term. <br> Well-documented, clean, easy
-            and
-            elegant interface helps any non-technical clients.</p>
+          <h2>Let's discover to my life!</h2>
+          <p> Here you can find some countries where I lived, studied or worked.</p>
         </div>
-
         <div>
           <img src="./images/KG.jpg" alt="KYRGYZSTAN">
           <h4>Motherland - KYRGYZSTAN</h4>
         </div>
-
         <div>
           <img src="./images/KZ.jpeg" alt="KAZAKHSTAN">
           <h4>KAZAKHSTAN</h4>
         </div>
-
         <div>
           <img src="./images/RU2.jpg" alt="RUSSIA">
           <h4>RUSSIA</h4>
         </div>
-
         <div>
           <img src="./images/DE.jpeg" alt="GERMANY">
           <h4>GERMANY</h4>
         </div>
-
         <div>
           <img src="./images/SP.jpg" alt="SPAIN">
           <h4>SPAIN</h4>
         </div>
-
         <div>
           <img src="./images/IT.jpg" alt="ITALY">
           <h4>ITALY</h4>
         </div>
-
         <div>
           <img src="./images/CZ.jpg" alt="CZECH REPUBLIC">
           <h4>CZECH REPUBLIC</h4>
         </div>
-
         <div>
           <img src="./images/TU.jpeg" alt="TURKEY">
           <h4>TURKEY</h4>
         </div>
-
         <div>
           <img src="./images/PO.jpg" alt="POLAND">
           <h4>POLAND</h4>
         </div>
-
         <div>
           <img src="./images/EG.jpeg" alt="EGYPT">
           <h4>EGYPT</h4>
         </div>
-
       </article>
-
-
+      <!-- Skills -->
       <article id="skills">
-
         <div>
           <span>-----MY SKILLS-----</span>
-          <h2>What My Programming Skills Included?</h2>
+          <h2>What My Programming Skills/Tools Included?</h2>
           <p>I develop simple, intuitive and responsive user interface that helps users get things done with less effort
             and time with those technologies.</p>
         </div>
-
         <div class="tools">
           <div>
             <a href="#" target="_blank"> <img src="./images/HTML5_logo.png" alt="HTML5_logo"> </a>
           </div>
-
           <div>
             <a href="#" target="_blank"> <img src="./images/CSS3_logo.png" alt="CSS3_logo"> </a>
           </div>
-
           <div>
             <a href="#" target="_blank"> <img src="./images/sass-logo.png" alt="sass-logo"> </a>
           </div>
-
           <div>
             <a href="#" target="_blank"> <img src="./images/Visual_Studio_Code.png" alt="Visual_Studio_Code"> </a>
           </div>
-
           <div>
             <a href="#" target="_blank"> <img src="./images/npm-logo.png" alt="npm-logo"> </a>
           </div>
-
           <div>
             <a href="#" target="_blank"> <img src="./images/slack_logo.png" alt="slack_logo"> </a>
           </div>
-
           <div>
             <a href="#" target="_blank"> <img src="./images/git_logo.png" alt="git_logo"> </a>
           </div>
-
-
         </div>
-
-
-
       </article>
-
+      <!-- Portfolio -->
       <article id="myworks">
         <div>
           <span>-----MY WORKS-----</span>
@@ -161,33 +135,28 @@
             and
             elegant interface helps any non-technical clients.</p>
         </div>
-
         <div>
           <a href="https://abatyrbekova.github.io/gallery-wall/" target="_blank"> <img src="./images/my-work-1.jpg"
               alt="my-work-1"> </a>
         </div>
-
         <div>
           <a href="https://abatyrbekova.github.io/Log-in-page/" target="_blank"> <img src="./images/my-work-2.jpg"
               alt="my-work-2"></a>
         </div>
-
         <div>
           <a href="https://abatyrbekova.github.io/periodic-Table/" target="_blank"> <img src="./images/my-work-3.jpg"
               alt="my-work-3"></a>
         </div>
-
         <div>
           <a href="https://abatyrbekova.github.io/mobile-app/" target="_blank"><img src="./images/my-work-4.jpg"
               alt="my-work-4"></a>
         </div>
-
         <div>
           <a href="https://abatyrbekova.github.io/youtube-clone/" target="_blank"><img src="./images/my-work-5.jpg"
               alt="my-work-5"></a>
         </div>
-
       </article>
+      <!-- Contact -->
       <article id="contact">
         <div>
           <span>-----CONTACT-----</span>
@@ -195,13 +164,10 @@
           <h2>Please Drop a Message</h2>
           <p>Get in touch and let me know how i can help. Fill out the form and i’ll be in touch as soon as possible.
           </p>
-
           <h3><img src="./images/phone_in_talk_black_24dp.svg" alt="phone_in_talk_black_24dp"> Phone:</h3>
           (+49) 163 680 93 01
-
           <h3><img src="./images/email_black_24dp.svg" alt="email_black_24dp"> Email:</h3>
           batyrbekova592@gmail.com
-
           <div>
             <a href="https://m.facebook.com/people/Aigerim-Batyrbekova/100001646539160/" target="_blank"><i
                 class="fa-brands fa-facebook"></i></a>
@@ -209,39 +175,34 @@
                 class="fa-brands fa-instagram"></i></a>
             <a href="https://github.com/abatyrbekova" target="_blank"><i class="fa-brands fa-github"></i></a>
           </div>
-
         </div>
-
+        <!-- Form -->
         <form action="index.js" method="get">
           <div>
             <h4>Name</h4>
             <i class="fa-solid fa-user"></i>
             <input type="text" name="usernameOrEmail" id="1" placeholder="e.g. John Doe">
           </div>
-
           <div>
             <h4>Email</h4>
             <i class="fa-solid fa-envelope"></i>
             <input type="email" name="email" id="2" placeholder="e.g. john.doe@gmail.com">
           </div>
-
           <div>
             <h4>Phone <em>(Optional)</em></h4>
             <i class="fa-solid fa-phone"></i>
             <input type="number" name="phoneNumber" id="3" placeholder="Phone Number">
           </div>
-
           <div>
             <h4>Message</h4>
             <i class="fa-solid fa-messages"></i>
             <textarea name="message" id="4" cols="30" rows="5" placeholder="Write message..."></textarea>
           </div>
-
           <button type="submit" class="submit-btn">SEND</button>
-
         </form>
       </article>
   </main>
+  <!-- Footer -->
   <footer>
     <hr />
     <div>
