giving hovering effects and cleaning structures

--- a/src/index.html
+++ b/src/index.html
@@ -104,25 +104,25 @@
         </div>
         <div class="tools">
           <div>
-            <a href="#" target="_blank"> <img src="./images/HTML5_logo.png" alt="HTML5_logo"> </a>
+            <a href="#" target="_blank">HTML5<img src="./images/html-logo.png" alt="HTML5_logo"></a>
           </div>
           <div>
-            <a href="#" target="_blank"> <img src="./images/CSS3_logo.png" alt="CSS3_logo"> </a>
+            <a href="#" target="_blank">CSS<img src="./images/css-logo.png" alt="CSS3_logo"></a>
           </div>
           <div>
-            <a href="#" target="_blank"> <img src="./images/sass-logo.png" alt="sass-logo"> </a>
+            <a href="#" target="_blank">Sass<img src="./images/sass-logo.png" alt="sass-logo"></a>
           </div>
           <div>
-            <a href="#" target="_blank"> <img src="./images/Visual_Studio_Code.png" alt="Visual_Studio_Code"> </a>
+            <a href="#" target="_blank">VS Code<img src="./images/Visual_Studio_Code.png" alt="Visual_Studio_Code"></a>
           </div>
           <div>
-            <a href="#" target="_blank"> <img src="./images/npm-logo.png" alt="npm-logo"> </a>
+            <a href="#" target="_blank">npm<img src="./images/npm-logo.png" alt="npm-logo"></a>
           </div>
           <div>
-            <a href="#" target="_blank"> <img src="./images/slack_logo.png" alt="slack_logo"> </a>
+            <a href="#" target="_blank">slack<img src="./images/slack_logo.png" alt="slack_logo"></a>
           </div>
           <div>
-            <a href="#" target="_blank"> <img src="./images/git_logo.png" alt="git_logo"> </a>
+            <a href="#" target="_blank">git<img src="./images/git_logo.png" alt="git_logo"></a>
           </div>
         </div>
       </article>
@@ -158,15 +158,16 @@
       </article>
       <!-- Contact -->
       <article id="contact">
-        <div>
+        <div class="contactme">
           <span>-----CONTACT-----</span>
           <h2>Have You Any Project?</h2>
           <h2>Please Drop a Message</h2>
-          <p>Get in touch and let me know how i can help. Fill out the form and i’ll be in touch as soon as possible.
+          <p>Get in touch and let me know how i can help. <br> Fill out the form and i’ll be in touch as soon as
+            possible.
           </p>
-          <h3><img src="./images/phone_in_talk_black_24dp.svg" alt="phone_in_talk_black_24dp"> Phone:</h3>
+          <h3><img src="./images/phone_in_talk_black_24dp.svg" alt="phone_in_talk_black_24dp">Phone:</h3>
           (+49) 163 680 93 01
-          <h3><img src="./images/email_black_24dp.svg" alt="email_black_24dp"> Email:</h3>
+          <h3><img src="./images/email_black_24dp.svg" alt="email_black_24dp">Email:</h3>
           batyrbekova592@gmail.com
           <div>
             <a href="https://m.facebook.com/people/Aigerim-Batyrbekova/100001646539160/" target="_blank"><i
@@ -201,6 +202,10 @@
           <button type="submit" class="submit-btn">SEND</button>
         </form>
       </article>
+      <!-- Go up button -->
+      <div id="myBtn">
+        <a href="#"><a href="#"><i class="fas fa-arrow-up"></i></a>
+      </div>
   </main>
   <!-- Footer -->
   <footer>
